Trim Person dialogue orchestration